--- a/kubernetes/apps/kube-system/cilium/app/base-values.yaml
+++ b/kubernetes/apps/kube-system/cilium/app/base-values.yaml
@@ -1609,13 +1609,13 @@ hubble:
         {}
         # kubernetes.io/ingress.class: nginx-internal
         # kubernetes.io/tls-acme: "true"
-      className: "nginx"
+      className: "nginx-internal"
       hosts:
-        - "${APP_DNS_HUBBLE}"
+        - "${DNS_APP_HUBBLE}"
       labels: {}
       tls:
         - hosts:
-            - "${APP_DNS_HUBBLE}"
+            - "${DNS_APP_HUBBLE}"
 
 # -- Method to use for identity allocation (`crd` or `kvstore`).
 identityAllocationMode: "crd"
