Re add security-system namespace

--- a/kubernetes/clusters/kube-prod/flux/kustomization.yaml
+++ b/kubernetes/clusters/kube-prod/flux/kustomization.yaml
@@ -8,4 +8,4 @@ resources:
   - app-template-repo.yaml
   - ../../../apps/kube-system/
   - ../../../apps/ingress-nginx/
-#  - ../../../apps/security-system/
+  - ../../../apps/security-system/
