--- a/kubernetes/apps/security-system/onepassword-connect/app/secret.yaml
+++ b/kubernetes/apps/security-system/onepassword-connect/app/secret.yaml
@@ -3,6 +3,7 @@ apiVersion: v1
 kind: Secret
 metadata:
   name: onepassword-connect-secret
+  namespace: security-system
 stringData:
   1password-credentials.json: ${OP_CREDENTIALS_JSON}
   token: ${OP_CONNECT_TOKEN}
