remove app template and troubleshoot secret kustomizations

--- a/kubernetes/apps/security-system/onepassword-connect/app/hr.yaml
+++ b/kubernetes/apps/security-system/onepassword-connect/app/hr.yaml
@@ -112,7 +112,7 @@ spec:
         enabled: true
         className: nginx-internal
         annotations:
-          hajimari.io/enable: "false"
+        #  hajimari.io/enable: "false"
         hosts:
           - host: &host "{{ .Release.Name }}.${DNS_HOME_ROOT}"
             paths:
