--- a/kubernetes/apps/security-system/onepassword-connect/app/secret.yaml
+++ b/kubernetes/apps/security-system/onepassword-connect/app/secret.yaml
@@ -4,6 +4,7 @@ kind: Secret
 metadata:
   name: onepassword-connect-secret
   namespace: security-system
+type: Opaque
 stringData:
   1password-credentials.json: ${OP_CREDENTIALS_JSON}
   token: ${OP_CONNECT_TOKEN}
