--- a/kubernetes/apps/security-system/external-secrets/stores/cluster-secret-store.yaml
+++ b/kubernetes/apps/security-system/external-secrets/stores/cluster-secret-store.yaml
@@ -4,11 +4,10 @@ apiVersion: external-secrets.io/v1beta1
 kind: ClusterSecretStore
 metadata:
   name: onepassword-connect
-  namespace: security-system
 spec:
   provider:
     onepassword:
-      connectHost: http://onepassword-connect.security-system.svc.cluster.local.:8080
+      connectHost: http://onepassword-connect.security-system.svc.cluster.local:8080
       vaults:
         ${OP_CONNECT_VAULT}: 1
       auth:
