troubleshoot op connect

--- a/kubernetes/apps/security-system/external-secrets/stores/cluster-secret-store.yaml
+++ b/kubernetes/apps/security-system/external-secrets/stores/cluster-secret-store.yaml
@@ -7,7 +7,7 @@ metadata:
 spec:
   provider:
     onepassword:
-      connectHost: http://onepassword-connect.security-system.svc.cluster.local
+      connectHost: http://onepassword-connect.security-system.svc.cluster.local:8080
       vaults:
         ${OP_CONNECT_VAULT}: 1
       auth:
