enclose op json reference in single quotes

--- a/kubernetes/apps/security-system/onepassword-connect/app/secret.yaml
+++ b/kubernetes/apps/security-system/onepassword-connect/app/secret.yaml
@@ -6,5 +6,5 @@ metadata:
   namespace: security-system
 type: Opaque
 stringData:
-  1password-credentials.json: ${OP_CREDENTIALS_JSON}
+  1password-credentials.json: '${OP_CREDENTIALS_JSON}'
   token: ${OP_CONNECT_TOKEN}
